--- a/style.css
+++ b/style.css
@@ -20,4 +20,20 @@ h3 {margin-left: 70%;
 h3 {padding-right: 40%;
 }
 
+.parte01 {
 
+    background-color: blueviolet;
+
+}
+
+.parte02 {
+
+    background-color: cadetblue;
+
+}
+
+.parte03 {
+
+    background-color: darkgoldenrod;
+
+}
