--- a/style.css
+++ b/style.css
@@ -22,18 +22,18 @@ h3 {padding-right: 40%;
 
 .parte01 {
 
-    background-color: blueviolet;
+    background-color: black;
 
 }
 
 .parte02 {
 
-    background-color: cadetblue;
+    background-color: red;
 
 }
 
 .parte03 {
 
-    background-color: darkgoldenrod;
+    background-color: blue;
 
 }
